--- a/notebooks/imdb.ipynb
+++ b/notebooks/imdb.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -213,7 +213,7 @@
        "4  [In #29, the constant zooming into certain lan...  user plot  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,13 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "movieplots.to_csv(dropbox + \"movieplots.csv\")"
+    "movieplots.to_csv(dropbox + \"movieplots.csv\", index=False)"
    ]
   }
  ],
