added slugify and number replacement

--- a/notebooks/processing.ipynb
+++ b/notebooks/processing.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,8 @@
     "from nltk.corpus import stopwords as sw\n",
     "from nltk.stem import *\n",
     "import urllib2\n",
-    "from gensim import corpora, models, similarities"
+    "from gensim import corpora, models, similarities\n",
+    "import slugify as sl"
    ]
   },
   {
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -118,18 +119,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "plots_sdf = sqlsc.createDataFrame(dftouse)"
+    "plots_sdf = sqlsc.createDataFrame(dftouse[:100])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def slugify (text):\n",
+    "    return sl.slugify(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -154,23 +167,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def process(sents, dostop=True, dostem=True):\n",
+    "num = re.compile('\\d')\n",
+    "def replace(word):\n",
+    "    return bool(num.search(word))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def process(sents, dostop=True, dostem=True, donum=True, do=True):\n",
     "    stopwords = set(sw.words('english'))\n",
     "    sents_processed  = []\n",
     "    words_processed  = []\n",
     "    for sent in sents:\n",
-    "        if dostop == True and dostem == True: \n",
-    "            words = [stem(word.lower()) for word in sent.words if word not in stopwords]     \n",
-    "        elif dostop == True:\n",
-    "            words = [word.lower() for word in sent.words if word not in stopwords]\n",
-    "        elif dostem == True:\n",
-    "            words = [stem(word.lower()) for word in sent.words ]\n",
+    "        words = []\n",
+    "        for word in sent.words:\n",
+    "            if dostop:\n",
+    "                if word in stopwords:\n",
+    "                    continue\n",
+    "            if donum:\n",
+    "                if contains_number(word):\n",
+    "                    continue\n",
+    "            if douni:\n",
+    "                word = slugify(word)\n",
+    "            if dostem:\n",
+    "                word = stem(word)\n",
+    "            words.append(word.lower())\n",
     "        sents_processed.append(words)\n",
     "        words_processed += words \n",
     "    return (sents_processed, words_processed)"
@@ -178,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -197,31 +230,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2394"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dictionary = corpora.Dictionary(docs_words)\n",
-    "dictionary.save(dropbox +\"testdict.dict\") "
+    "#dictionary.save(dropbox +\"testdict.dict\") \n",
+    "dictionary.token2id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "corpus = (dictionary.doc2bow(doc) for doc in docs_words)\n",
-    "corpora.MmCorpus.serialize(dropbox +\"testcorpus.mm\", corpus)"
+    "#corpora.MmCorpus.serialize(dropbox +\"testcorpus.mm\", corpus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -229,6 +274,40 @@
    "source": [
     "tfidf = models.TfidfModel(corpus)\n",
     "corpus_tfidf = tfidf[corpus]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'self.'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot=[u'Jules is, self declared, the most useless person in the post apocalyptic world, until he finds an old film camera and determines to make the greatest movie in the new world... the only movie in the new world. But his first day filming is proving to be much more difficult than he imagined. Who knew that making a movie after the end of the world would be so hard?']\n",
+    "slugify(sentences(plot[0])[0].words[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sdf"
    ]
   }
  ],
