--- a/notebooks/processing.ipynb
+++ b/notebooks/processing.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -29,12 +29,14 @@
     "from nltk.stem import *\n",
     "import urllib2\n",
     "from gensim import corpora, models, similarities\n",
-    "import slugify as sl"
+    "import slugify as sl\n",
+    "import pickle\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -73,14 +75,23 @@
     "from ast import literal_eval\n",
     "movieplots['plots'] = movieplots['plots'].apply(literal_eval)\n",
     "\n",
-    "movieplots = movieplots.apply(clean, axis = 1)\n",
-    "\n",
+    "movieplots = movieplots.apply(clean, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "dftouse = movieplots[movieplots.year > 2014]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -113,20 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def sentences(text):\n",
-    "    blob = tb.TextBlob(text.decode('unicode-escape'))\n",
+    "    blob = tb.TextBlob(text.decode('unicode-escape', 'ignore'))\n",
     "    return blob.sentences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +185,7 @@
     "                word = stem(word)\n",
     "            if len(word) < 2:\n",
     "                continue\n",
-    "            words.append(word.lower())\n",
+    "            words.append(word)\n",
     "        sents_processed.append(words)\n",
     "        words_processed += words \n",
     "    return (sents_processed, words_processed)"
@@ -182,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +203,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 3 µs, sys: 1 µs, total: 4 µs\n",
-      "Wall time: 7.87 µs\n"
+      "Wall time: 5.01 µs\n"
      ]
     }
    ],
@@ -203,26 +214,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "dictionary = corpora.Dictionary(documents)\n",
-    "dictionary.save(dropbox +\"testdict.dict\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "corpus = (dictionary.doc2bow(doc) for doc in documents)\n",
-    "corpora.MmCorpus.serialize(dropbox +\"testcorpus.mm\", corpus)"
+    "#save as pickle\n",
+    "with open(dropbox +'imdb_plots_since_2014.pickle', 'wb') as f:\n",
+    "    np.save(f, documents.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#save as text file\n",
+    "with open(dropbox +'imdb_plots_since_2014.list', 'wb') as f:\n",
+    "    for plot in documents:\n",
+    "        f.write(\"%s\\n\" % plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "movies = dftouse['title'].values\n",
+    "with open(dropbox +'imdb_movies_since_2014.pickle', 'wb') as f:\n",
+    "    np.save(f,movies)"
    ]
   },
   {
