added keywords, pos tags, processing for doc2vec

--- a/notebooks/processing.ipynb
+++ b/notebooks/processing.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -23,6 +23,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from gensim import corpora, models, similarities\n",
     "import textblob as tb\n",
     "import nltk\n",
     "from nltk.corpus import stopwords as sw\n",
@@ -31,18 +32,29 @@
     "from gensim import corpora, models, similarities\n",
     "import slugify as sl\n",
     "import pickle\n",
-    "import re"
+    "import re\n",
+    "import RAKE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dropbox = \"/Users/mr/Dropbox/moviemeta/\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dropbox = \"/Users/mr/Dropbox/moviemeta/\"\n",
     "movieplots = pd.read_csv(dropbox + 'movieplots.csv')"
    ]
   },
@@ -103,11 +115,92 @@
       "(259028, 5)\n",
       "(16943, 5)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>source</th>\n",
+       "      <th>year</th>\n",
+       "      <th>plots</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>#1 at the Apocalypse Box Office (2015)</td>\n",
+       "      <td>imdb</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>[Jules is, self declared, the most useless per...</td>\n",
+       "      <td>user plot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>#50Fathers (2015)</td>\n",
+       "      <td>imdb</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>[#50Fathers is an American Dramatic Comedy. Do...</td>\n",
+       "      <td>user plot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>#BeRobin the Movie (2015)</td>\n",
+       "      <td>imdb</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>[A documentary about Margaret Cho's homeless o...</td>\n",
+       "      <td>user plot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>#Beings (2015)</td>\n",
+       "      <td>imdb</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>[Beings is the second feature film of Stefanes...</td>\n",
+       "      <td>user plot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>#Disneyland60 (2015)</td>\n",
+       "      <td>imdb</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>[Kate, a 15 year old college student documents...</td>\n",
+       "      <td>user plot</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     title source  year  \\\n",
+       "2   #1 at the Apocalypse Box Office (2015)   imdb  2015   \n",
+       "9                        #50Fathers (2015)   imdb  2015   \n",
+       "15               #BeRobin the Movie (2015)   imdb  2015   \n",
+       "16                          #Beings (2015)   imdb  2015   \n",
+       "20                    #Disneyland60 (2015)   imdb  2015   \n",
+       "\n",
+       "                                                plots       type  \n",
+       "2   [Jules is, self declared, the most useless per...  user plot  \n",
+       "9   [#50Fathers is an American Dramatic Comedy. Do...  user plot  \n",
+       "15  [A documentary about Margaret Cho's homeless o...  user plot  \n",
+       "16  [Beings is the second feature film of Stefanes...  user plot  \n",
+       "20  [Kate, a 15 year old college student documents...  user plot  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print movieplots.shape\n",
-    "print dftouse.shape"
+    "print dftouse.shape\n",
+    "dftouse.head()"
    ]
   },
   {
@@ -149,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -162,38 +255,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Rake = RAKE.Rake('/Users/mr/Devel/Harvard/CS109/Project/moviemeta/data/stoplists/FoxStoplist.txt')\n",
+    "def keywords(text):\n",
+    "    keywords = Rake.run(text)\n",
+    "    return ' '.join([tup[0] for tup in keywords])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def process(sents, dostop=True, dostem=True, donum=True, doslug=True):\n",
-    "    stopwords = set(sw.words('english'))\n",
-    "    sents_processed  = []\n",
-    "    words_processed  = []\n",
+    "def process(sents, movie_id=None, stop=False, postags=None ):\n",
+    "    if stop:\n",
+    "        stopwords = set(sw.words('english'))\n",
+    "    doc_sents  = []\n",
+    "    doc_words  = []\n",
     "    for sent in sents:\n",
-    "        words = []\n",
-    "        for word in sent.words:\n",
-    "            if donum and contains_number(word):\n",
+    "        if postags:\n",
+    "            words = sent.tags\n",
+    "        else:\n",
+    "            words = sent.words\n",
+    "        words_processed = []\n",
+    "        for word in words:\n",
+    "            if postags:\n",
+    "                if word[1] not in postags:\n",
     "                    continue\n",
-    "            if doslug:\n",
-    "                word = slugify(word)\n",
-    "            if dostop and word in stopwords:\n",
+    "                else:\n",
+    "                    word = word[0]\n",
+    "            if stop and word in stopwords:\n",
     "                    continue\n",
-    "            if dostem:\n",
-    "                word = stem(word)\n",
+    "            if contains_number(word):\n",
+    "                    continue\n",
+    "            word = stem(slugify(word))\n",
     "            if len(word) < 2:\n",
     "                continue\n",
-    "            words.append(word)\n",
-    "        sents_processed.append(words)\n",
-    "        words_processed += words \n",
-    "    return (sents_processed, words_processed)"
+    "            words_processed.append(word)\n",
+    "        doc_sents.append(models.doc2vec.LabeledSentence(words_processed,[movie_id]))\n",
+    "        doc_words += words_processed \n",
+    "    return (doc_sents, doc_words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#do the processing for topic models\n",
+    "documents_tm = dftouse['plots'].apply(lambda x : process(sentences(keywords(' '.join(x))))[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#do the processing for doc2vec\n",
+    "def process_d2v(row):\n",
+    "    movie = row[0]\n",
+    "    plots = ' '.join(row[1])\n",
+    "    return  process(sentences(plots), movie_id=movie, stop=True)[0]\n",
+    "documents_d2v = dftouse.head(100)[['title','plots']].apply(process_d2v, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#models.Doc2Vec(documents_d2v)\n",
+    "sents=[]\n",
+    "for doc in documents_d2v:\n",
+    "    for sent in doc:\n",
+    "        sents.append(sent)\n",
+    "d2v = models.Doc2Vec(sents, dbow_words=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('10 Milliarden (2015)', 0.17417208850383759),\n",
+       " ('100 Miles to Lordsburg (2015)', 0.13997596502304077),\n",
+       " ('12 Rounds 3: Lockdown (2015)', 0.12714487314224243),\n",
+       " ('1915 (2015)', 0.10568301379680634),\n",
+       " ('19-2 on Bravo: The Dark Side (2015) (V)', 0.09917952865362167),\n",
+       " ('11:55 Holyoke (2015)', 0.09635968506336212),\n",
+       " ('1 Building and 40 People Dancing (2015)', 0.09364811331033707),\n",
+       " ('1945. Kalniskes- luzio taskas/1945. Kalniskes- a breakpoint (2016)',\n",
+       "  0.09166409075260162),\n",
+       " ('10,000 Miles (2016)', 0.08629010617733002),\n",
+       " ('0-1 (2015)', 0.08533351123332977)]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#print sents[0][1]\n",
+    "\n",
+    "d2v.docvecs.most_similar(sents[0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -202,54 +394,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 1 µs, total: 4 µs\n",
-      "Wall time: 5.01 µs\n"
+      "['Jules is, self declared, the most useless person in the post apocalyptic world, until he finds an old film camera and determines to make the greatest movie in the new world... the only movie in the new world. But his first day filming is proving to be much more difficult than he imagined. Who knew that making a movie after the end of the world would be so hard?']\n",
+      "[u'post', u'apocalypt', u'world', u'day', u'film', u'film', u'camera', u'useless', u'person', u'self', u'declar', u'world', u'determin', u'movi', u'prove', u'jule', u'imagin', u'hard', u'difficult']\n"
      ]
     }
    ],
    "source": [
-    "%time\n",
-    "documents = dftouse['plots'].apply(lambda x : process(sentences(' '.join(x)))[1])"
+    "print dftouse['plots'][2]\n",
+    "print documents[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#save as pickle\n",
-    "with open(dropbox +'imdb_plots_since_2014.pickle', 'wb') as f:\n",
-    "    np.save(f, documents.values)"
+    "#save the correspondin movies\n",
+    "movies = dftouse['title'].values\n",
+    "with open(dropbox +'imdb_movies_since_2014.pickle', 'wb') as f:\n",
+    "    np.save(f,movies)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#save as text file\n",
-    "with open(dropbox +'imdb_plots_since_2014.list', 'wb') as f:\n",
-    "    for plot in documents:\n",
-    "        f.write(\"%s\\n\" % plot)"
+    "### Example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "movies = dftouse['title'].values\n",
-    "with open(dropbox +'imdb_movies_since_2014.pickle', 'wb') as f:\n",
-    "    np.save(f,movies)"
+    "doc = \"\"\"St. Johns, Newfoundland is a city with a deep musical spirit and few bands embody that spirit better that The Once. Named for a unique Newfoundland phrase that means \"imminently,\" now is indeed their time. Live at the Stagehouse is an hour of interviews and performances by this amazing trio, featuring songs recorded live off the floor in late 2013 at the picturesque Stagehouse Recording Studio in St. Philip's. The Once embraces a different vision of Newfoundland music. Their sounds do not come from the noisy pubs and dockside taverns that fuel so much of the Island's energy. Instead, their music comes from a quieter and more thoughtful place. Hope and tragedy are intertwined, whether they are singing an old lament from World War I, original songs that speak of love defeated, or tasteful songs from the artists whose music inspires them. The Once: Live at the Stagehouse features some of their best-loved tunes and some never heard before. It is a unique opportunity to see one of Canada's fastest rising bands in the place that inspires them and feeds their soul.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%time\n",
+    "test = process(sentences(doc))\n",
+    "%time\n",
+    "testpostags = process(sentences(doc),postags=['FW', 'JJ','JJR','JJS','NN','NNS','NNP', 'NNPS','VB','VBD','VBG','VBN','VBP','VBZ'])\n",
+    "%time\n",
+    "testkeywords = process(sentences(keywords(doc)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print testkeywords\n",
+    "print testpostags"
    ]
   },
   {
