added wikipedia scraping

--- a/notebooks/dbpedia_plots.ipynb
+++ b/notebooks/dbpedia_plots.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -20,6 +20,7 @@
    "source": [
     "from SPARQLWrapper import SPARQLWrapper, JSON\n",
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "movies_for_year_query = \"\"\"\n",
     "                PREFIX dbpont: <http://dbpedia.org/ontology/>\n",
@@ -107,23 +108,30 @@
     "    sparql.setReturnFormat(JSON)\n",
     "    results = sparql.query().convert()\n",
     "    year_df = sparql_json_to_df(results, year)\n",
+    "    # Do some cleanup\n",
+    "    strip_url = lambda x: re.sub(\"http://dbpedia.org/resource/\", \"\", x)\n",
+    "    year_df.languages = year_df.languages.apply(strip_url)\n",
+    "    year_df.languages = year_df.languages.apply(lambda x: re.sub(\"_language\", \"\", x))\n",
+    "    year_df.countries = year_df.countries.apply(strip_url)\n",
+    "    # Remove (film) or (<year> film) at the end of the title\n",
+    "    year_df.title = year_df.title.apply(lambda x: re.sub(r\"[\\ ]*\\((%s)?[\\ ]*film\\)\" % str(year), \"\", x))\n",
     "    return(year_df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "years = range(2000, 2016)"
+    "years = range(2015, 2016)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -132,21 +140,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('1171', ' records for the year ', '2000', 'written to ', 'dbpedia_meta_2000.csv')\n",
-      "('1212', ' records for the year ', '2001', 'written to ', 'dbpedia_meta_2001.csv')\n",
-      "('1257', ' records for the year ', '2002', 'written to ', 'dbpedia_meta_2002.csv')\n",
-      "('1374', ' records for the year ', '2003', 'written to ', 'dbpedia_meta_2003.csv')\n",
-      "('1499', ' records for the year ', '2004', 'written to ', 'dbpedia_meta_2004.csv')\n",
-      "('1622', ' records for the year ', '2005', 'written to ', 'dbpedia_meta_2005.csv')\n",
-      "('1900', ' records for the year ', '2006', 'written to ', 'dbpedia_meta_2006.csv')\n",
-      "('1970', ' records for the year ', '2007', 'written to ', 'dbpedia_meta_2007.csv')\n",
-      "('2012', ' records for the year ', '2008', 'written to ', 'dbpedia_meta_2008.csv')\n",
-      "('2135', ' records for the year ', '2009', 'written to ', 'dbpedia_meta_2009.csv')\n",
-      "('1991', ' records for the year ', '2010', 'written to ', 'dbpedia_meta_2010.csv')\n",
-      "('1960', ' records for the year ', '2011', 'written to ', 'dbpedia_meta_2011.csv')\n",
-      "('2034', ' records for the year ', '2012', 'written to ', 'dbpedia_meta_2012.csv')\n",
-      "('2114', ' records for the year ', '2013', 'written to ', 'dbpedia_meta_2013.csv')\n",
-      "('1929', ' records for the year ', '2014', 'written to ', 'dbpedia_meta_2014.csv')\n",
       "('476', ' records for the year ', '2015', 'written to ', 'dbpedia_meta_2015.csv')\n"
      ]
     }
@@ -160,6 +153,53 @@
     "    dbp_df.to_csv(csv_filename, sep='\\t', encoding='utf-8')\n",
     "    print(str(len(dbp_df)), \" records for the year \", str(year), \"written to \", csv_filename)\n",
     "    time.sleep(1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now scrape Wikipedia for plot summaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import urllib2\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def get_wikipedia_plot(wiki_link, delay_sec=1):\n",
+    "    time.sleep(delay_sec)\n",
+    "    soup = BeautifulSoup(urllib2.urlopen(wiki_link))    \n",
+    "    plot = \"\"\n",
+    "    headers = soup.find_all('h2')\n",
+    "    for header in headers:\n",
+    "        plot_header = header.find(id=[\"Plot\", \"Summary\", \"Synopsis\"])\n",
+    "        if(plot_header == None):\n",
+    "            plot_header = header.find(id=\"Story\")\n",
+    "        if(plot_header):\n",
+    "            for section in header.find_next_siblings():\n",
+    "                if(section.name == \"h2\"):\n",
+    "                    break\n",
+    "                plot += section.get_text()\n",
+    "                \n",
+    "    return plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbp_df['wiki_plot'] = dbp_df.wikipediaLink.apply(lambda link:get_wikipedia_plot(link))"
    ]
   },
   {
