some minor changes

--- a/notebooks/processing.ipynb
+++ b/notebooks/processing.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -31,13 +31,12 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from gensim import corpora, models, similarities\n",
     "import textblob as tb\n",
     "import nltk\n",
     "from nltk.corpus import stopwords as sw\n",
     "from nltk.stem import *\n",
     "import urllib2\n",
-    "from gensim import corpora, models, similarities\n",
+    "from gensim import models\n",
     "import slugify as sl\n",
     "import pickle\n",
     "import re\n",
@@ -378,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -449,15 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#save the documents\n",
-    "save(documents_tm, 'imdb_plots_since_2014.list')\n",
-    "save(documents_d2v, 'imdb_plots_since_2014_d2v.list')"
+    "save(documents_tm, 'imdb_plots_since_2014')\n",
+    "with open(dropbox +'imdb_plots_since_2014_d2v.pickle', 'wb') as f:\n",
+    "    np.save(f, documents_d2v.values)"
    ]
   },
   {
