correct handling of unicode urls

--- a/notebooks/dbpedia_plots.ipynb
+++ b/notebooks/dbpedia_plots.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DBPedia Mining to get Movie Metadata\n",
+    "# DBPedia and Wikipedia Mining to get Movie Metadata\n",
     "\n",
     "\n",
     "We use SPARQL queries to get dbpedia metadata for movies released in a year. Then the plot summaries are scraped from Wikipedia for each of these movies.\n"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -21,6 +21,9 @@
     "from SPARQLWrapper import SPARQLWrapper, JSON\n",
     "import pandas as pd\n",
     "import re\n",
+    "import urllib2\n",
+    "from bs4 import BeautifulSoup\n",
+    "import httplib\n",
     "\n",
     "movies_for_year_query = \"\"\"\n",
     "                PREFIX dbpont: <http://dbpedia.org/ontology/>\n",
@@ -120,86 +123,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "years = range(2015, 2016)"
+    "import re, urlparse\n",
+    "\n",
+    "'''\n",
+    " The iri to uri conversion routines are from \n",
+    " http://stackoverflow.com/questions/4389572/how-to-fetch-a-non-ascii-url-with-python-urlopen\n",
+    "'''\n",
+    "def urlEncodeNonAscii(b):\n",
+    "    return re.sub('[\\x80-\\xFF]', lambda c: '%%%02x' % ord(c.group(0)), b)\n",
+    "\n",
+    "def iri2uri(iri):\n",
+    "    parts = urlparse.urlparse(iri)\n",
+    "    parts_cleaned = [part.encode('idna') \n",
+    "                         if i == 1 else urlEncodeNonAscii(part.encode('utf-8'))\n",
+    "                         for i, part in enumerate(parts)]\n",
+    "    \n",
+    "    return urlparse.urlunparse(parts_cleaned)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('476', ' records for the year ', '2015', 'written to ', 'dbpedia_meta_2015.csv')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import time\n",
+    "def get_wikipedia_plot(wiki_link, delay_sec=0.5):\n",
+    "    time.sleep(delay_sec)\n",
+    "    plot = \"\"\n",
+    "    \n",
+    "    try: \n",
+    "        wiki_resp = urllib2.urlopen(iri2uri(wiki_link))\n",
     "\n",
-    "for year in years:\n",
-    "    dbp_df = get_dbpedia_data_for_year(year)\n",
-    "    csv_filename = \"dbpedia_meta_\" + str(year) + \".csv\"\n",
-    "    dbp_df.to_csv(csv_filename, sep='\\t', encoding='utf-8')\n",
-    "    print(str(len(dbp_df)), \" records for the year \", str(year), \"written to \", csv_filename)\n",
-    "    time.sleep(1)\n"
+    "        soup = BeautifulSoup(wiki_resp)    \n",
+    "        headers = soup.find_all('h2')\n",
+    "        for header in headers:\n",
+    "            plot_header = header.find(id=[\"Plot\", \"Summary\", \"Synopsis\"])\n",
+    "            if(plot_header == None):\n",
+    "                plot_header = header.find(id=\"Story\")\n",
+    "            if(plot_header):\n",
+    "                for section in header.find_next_siblings():\n",
+    "                    if(section.name == \"h2\"):\n",
+    "                        break\n",
+    "                    plot += section.get_text()\n",
+    "\n",
+    "    except urllib2.HTTPError, e:\n",
+    "        print(wiki_link + ': HTTPError = ' + str(e.code))\n",
+    "    except urllib2.URLError, e:\n",
+    "        print(wiki_link + ': URLError = ' + str(e.reason))\n",
+    "    except httplib.HTTPException, e:\n",
+    "        print(wiki_link + ': HTTPException')\n",
+    "    except UnicodeEncodeError:\n",
+    "        print(wiki_link + \": unicode encode error\")\n",
+    "    except Exception:\n",
+    "        print(wiki_link + ': generic exception')\n",
+    "                \n",
+    "    return plot"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now scrape Wikipedia for plot summaries"
+    "Retrieve the dbpedia metadata and construct a dataframe for each year. Then, go to the wikipedia link and extract the plot summary if available."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import urllib2\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "def get_wikipedia_plot(wiki_link, delay_sec=1):\n",
-    "    time.sleep(delay_sec)\n",
-    "    soup = BeautifulSoup(urllib2.urlopen(wiki_link))    \n",
-    "    plot = \"\"\n",
-    "    headers = soup.find_all('h2')\n",
-    "    for header in headers:\n",
-    "        plot_header = header.find(id=[\"Plot\", \"Summary\", \"Synopsis\"])\n",
-    "        if(plot_header == None):\n",
-    "            plot_header = header.find(id=\"Story\")\n",
-    "        if(plot_header):\n",
-    "            for section in header.find_next_siblings():\n",
-    "                if(section.name == \"h2\"):\n",
-    "                    break\n",
-    "                plot += section.get_text()\n",
-    "                \n",
-    "    return plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "dbp_df['wiki_plot'] = dbp_df.wikipediaLink.apply(lambda link:get_wikipedia_plot(link))"
+    "years = range(2000, 2016)"
    ]
   },
   {
@@ -209,7 +213,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "\n",
+    "for year in years:\n",
+    "    dbp_df = get_dbpedia_data_for_year(year)\n",
+    "    dbp_df['wiki_plot'] = dbp_df.wikipediaLink.apply(lambda link:get_wikipedia_plot(link))\n",
+    "    csv_filename = \"wikipedia_plots_\" + str(year) + \".csv\"\n",
+    "    dbp_df.to_csv(csv_filename, sep='\\t', encoding='utf-8')\n",
+    "    print(str(len(dbp_df)), \" records for the year \", str(year), \"written to \", csv_filename)"
+   ]
   }
  ],
  "metadata": {
